--- a/CinemaTicketingSystem.Infrastructure/CinemaTicketingSystem.Infrastructure.csproj
+++ b/CinemaTicketingSystem.Infrastructure/CinemaTicketingSystem.Infrastructure.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CinemaTicketingSystem.Domain\CinemaTicketingSystem.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
