--- a/CinemaTicketingSystem.Web/CinemaTicketingSystem.Web.csproj
+++ b/CinemaTicketingSystem.Web/CinemaTicketingSystem.Web.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\CinemaTicketingSystem.Infrastructure\CinemaTicketingSystem.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
