some methods added to controllers

--- a/CinemaTicketingSystem.Application/CinemaTicketingSystem.Application.csproj
+++ b/CinemaTicketingSystem.Application/CinemaTicketingSystem.Application.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\Interfaces\" />
+    <Folder Include="Services\Implementation\" />
+    <Folder Include="Services\Interfaces\" />
+  </ItemGroup>
+
 </Project>
