--- a/CinemaTicketingSystem.Infrastructure/CinemaTicketingSystem.Infrastructure.csproj
+++ b/CinemaTicketingSystem.Infrastructure/CinemaTicketingSystem.Infrastructure.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\CinemaTicketingSystem.Domain\CinemaTicketingSystem.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
