--- a/CinemaTicketingSystem.Application/CinemaTicketingSystem.Application.csproj
+++ b/CinemaTicketingSystem.Application/CinemaTicketingSystem.Application.csproj
@@ -7,9 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Interfaces\" />
     <Folder Include="Services\Implementation\" />
     <Folder Include="Services\Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CinemaTicketingSystem.Domain\CinemaTicketingSystem.Domain.csproj" />
   </ItemGroup>
 
 </Project>
