--- a/CinemaTicketingSystem.Web/CinemaTicketingSystem.Web.csproj
+++ b/CinemaTicketingSystem.Web/CinemaTicketingSystem.Web.csproj
@@ -20,7 +20,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\movieImages\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Views\Shared\_AdminLayout.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
