--- a/CinemaTicketingSystem.Infrastructure/CinemaTicketingSystem.Infrastructure.csproj
+++ b/CinemaTicketingSystem.Infrastructure/CinemaTicketingSystem.Infrastructure.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Stripe.net" Version="47.3.0" />
   </ItemGroup>
 
   <ItemGroup>
